tests/typechecker/should_pass/divergent_extendables.csp
datatype X = Y

f :: (a =>* Event, a =>* X) -> Proc
f(x, y) = STOP

channel c

g :: Proc
g = f(c, Y)
