tests/typechecker/should_fail/polymorphic_let.csp
f =
    let
        -- g :: (a) -> a
        g(x) = x
    within (g(0), g(true))
